# downsat

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE.md  Makefile  README.md  pyproject.toml
downsat/: __init__.py
downsat/clients/: eumdac.py  spacetrack.py
downsat/config/: downsat.yaml  platform.yaml  satellites.yaml
downsat/config/clients/: eumdac.yaml  spacetrack.yaml
downsat/core/: cache.py  config.py  file_storage.py  io.py  lock.py  models.py  platform.py  typing.py  utils.py
downsat/data_sources/: eumetsat.py  satellite_info.py  satpy.py  tle.py
downsat/etl/: __init__.py  abc.py  class_transforms.py  class_utils.py  context.py  converters.py  datasource.py  metaclasses.py  metadata.py  protocols.py  transforms.py  types.py  weakref.py
downsat/etl/utils/: data_manipulation.py
downsat/query/: polar.py
downsat/satpy/: __init__.py
tests/: conftest.py  test_readme.py  test_version.py
tests/clients/: test_eumdac.py  test_spacetrack.py
tests/core/: test_cache.py  test_file_storage.py  test_io.py  test_lock.py  test_platform.py  test_utils.py
tests/data_sources/: test_eumetsat.py  test_satellite_info.py  test_satpy.py  test_tle.py
tests/etl/: test_abc.py  test_class_transforms.py  test_class_utils.py  test_context.py  test_converters.py  test_datasource.py  test_metaclasses.py  test_metadata.py  test_transforms.py  test_weakref.py
tests/query/: test_polar.py
